--- a/content/Пользовательский интерфейс/Гистограмма.md
+++ b/content/Пользовательский интерфейс/Гистограмма.md
@@ -14,7 +14,7 @@
 
 Далее пользователь может добавить еще данных, просто перенеся другие скважины в область гистограммы:
 
-![600](Гистограмма_imgs/AddDataToHistogram.gif)
+![](Гистограмма_imgs/AddDataToHistogram.gif)
 
 Далее можно настроить масштаб отображения:
 + изменить масштаб гистограмма (перенести ее визуально влево или вправо) можно при помощи удержания правой кнопки мыши
