--- a/content/Пользовательский интерфейс/Гистограмма.md
+++ b/content/Пользовательский интерфейс/Гистограмма.md
@@ -3,8 +3,7 @@
 ![600](Гистограмма_imgs/HistogramOnRibbon.png)
 
 При открытии данного инструмента, пользователь увидит следующее окно:
-
-![600](Гистограмма_imgs/Histogram_empty1.png)
+![](Пользовательский%20интерфейс/Гистограмма_imgs/Histogram_empty1.png)
 
 По умолчанию задано значение RHOB для отображения. Пользователь может перенести в поле с надписью RHOB любую другую кривую для ее отображения в качестве гистограммы. Для примера отобразим кривую GR (Гамма каротаж):
 
