--- a/content/Пользовательский интерфейс/Гистограмма.md
+++ b/content/Пользовательский интерфейс/Гистограмма.md
@@ -1,19 +1,20 @@
 Инструмент Гистограмма доступен в верхней части панели продукта
 
-![600](Гистограмма_imgs/HistogramOnRibbon.png)
+![](Пользовательский%20интерфейс/Гистограмма_imgs/HistogramOnRibbon.png)
+
 
 При открытии данного инструмента, пользователь увидит следующее окно:
 ![](Пользовательский%20интерфейс/Гистограмма_imgs/Histogram_empty1.png)
 
 По умолчанию задано значение RHOB для отображения. Пользователь может перенести в поле с надписью RHOB любую другую кривую для ее отображения в качестве гистограммы. Для примера отобразим кривую GR (Гамма каротаж):
 
-![600](Гистограмма_imgs/GammaRaySingleWell.png)
+![](Пользовательский%20интерфейс/Гистограмма_imgs/GammaRaySingleWell.png)
 
 При этом будут отображены сразу блоковая и непрерывный тип гистограммы.
 
 Далее пользователь может добавить еще данных, просто перенеся другие скважины в область гистограммы:
 
-![](Гистограмма_imgs/AddDataToHistogram.gif)
+![](Пользовательский%20интерфейс/Гистограмма_imgs/AddDataToHistogram.gif)
 
 Далее можно настроить масштаб отображения:
 + изменить масштаб гистограмма (перенести ее визуально влево или вправо) можно при помощи удержания правой кнопки мыши
@@ -22,13 +23,13 @@
 
 Пример:
 
-![600](Гистограмма_imgs/ChangeView.gif)
+![](Пользовательский%20интерфейс/Гистограмма_imgs/ChangeView.gif)
 
 
 Для отображения гистограммы по другим данным, когда скважины уже определены, необходимо изменить имя в фильтре данных. Для этого пользователю достаточно перенести требуемое имя на это поле:
 
-![](Гистограмма_imgs/ChangeLogs.gif)
+![](Пользовательский%20интерфейс/Гистограмма_imgs/ChangeLogs.gif)
 
 Демонстрация на видео:
 
-![600](Гистограмма_imgs/AddDataToHistogram.gif)
+![](Пользовательский%20интерфейс/Гистограмма_imgs/AddDataToHistogram.gif)
