--- a/content/Пользовательский интерфейс/Гистограмма.md
+++ b/content/Пользовательский интерфейс/Гистограмма.md
@@ -33,3 +33,11 @@
 Демонстрация на видео:
 
 ![](Пользовательский%20интерфейс/Гистограмма_imgs/AddDataToHistogram.gif)
+
+
+
+Вернуться на страницы:
+
+[Пользовательский интерфейс](Пользовательский%20интерфейс/UsersInterface_main.md)
+
+[Главная](_index.md)
