--- a/content/Пользовательский интерфейс/Гистограмма.md
+++ b/content/Пользовательский интерфейс/Гистограмма.md
@@ -43,6 +43,6 @@
 
 Вернуться на страницы:
 
-[Пользовательский интерфейс](Пользовательский%20интерфейс/UsersInterface_main.md)
+[Пользовательский интерфейс](Пользовательский%20интерфейс/Пользовательский%20интерфейс.md)
 
 [Главная](_index.md)
