--- a/content/Пользовательский интерфейс/Пользовательский интерфейс.md
+++ b/content/Пользовательский интерфейс/Пользовательский интерфейс.md
@@ -9,7 +9,7 @@
 
 [Окно отображения информации](Пользовательский%20интерфейс/Окно%20отображения%20информации.md)
 
-## Основные графические окна
+# Основные графические окна
 
 [Работа с планшетом](Пользовательский%20интерфейс/Работа%20с%20планшетом.md)
 
