--- a/content/Пользовательский интерфейс/Работа с планшетом.md
+++ b/content/Пользовательский интерфейс/Работа с планшетом.md
@@ -1,3 +1,11 @@
+```yaml
+---
+title: "Example Title"
+tags:
+- example-tag
+---
+```
+
 Окно визуализации каротажных данных (**Log** **View**) – самый часто используемый инструмент в продукте и один из самых важных для пользователя во время работы.
 
 На первом этапе создания продукта Гамма была реализована уникальная инновационная часть графической визуализации каротажных кривых, которая позволила впервые создать планшет, способный отображать практически любое количество каротажных кривых, при этом не теряя производительности. Пользователь имеет доступ к полноценному многоскважинному инструменту визуализации каротажных кривых, способный отображать как одну, так и десятки, а при необходимости и сотни скважин, создавая наглядные корреляционные схемы и многократно повышая эффективность многоскважинного анализа.
