--- a/content/Пользовательский интерфейс/Работа с планшетом.md
+++ b/content/Пользовательский интерфейс/Работа с планшетом.md
@@ -1,9 +1,11 @@
 
 ---
-title: "Example Title"
+title: "Работа с планшетом"
 date: 2022-08-14T09:03:20-08:00
 tags:
-- example-tag
+- LogView
+- Планшет
+- Основы
 ---
 
 Окно визуализации каротажных данных (**Log** **View**) – самый часто используемый инструмент в продукте и один из самых важных для пользователя во время работы.
