--- a/content/Инструкция по установке ПО/Ссылки для скачивания.md
+++ b/content/Инструкция по установке ПО/Ссылки для скачивания.md
@@ -3,18 +3,32 @@ title: "Ссылки для скачивания"
 date: 2022-08-14T09:03:20-08:00
 tags:
 - Установка
-- Ссылки
+- Полезные ссылки
+- Дистрибутив
 ---
 
 
 
-Все дистрибутивы хранятся на файлообменном сервере официального сайта продукта: Gamma-Wellbore.com.
+Все дистрибутивы хранятся на файлообменном сервере официального сайта продукта: Gamma-Wellbore.com
 
-Т.к. скорее всего вы читаете этот текст с данного сайта, то вы уже зарегистрированный пользователь и имеете доступ для скачивания дистрибутива продукта. Можете перейти на страницу и скачать нужные вам файлы:
+Процедура регистрации на сайте для получения доступа описана на сайте:
+
+https://gamma-wellbore.com/access/
+
+Как только вы зарегистрируетесь и получите доступ к полной версии сайта, можете перейти на страницу и скачать нужные вам файлы:
 
 [Перейти на страницу с дистрибутивами](https://gamma-wellbore.com/download_page/)
 
 
-### Следующая страница
+### Связанные страницы:
 
 [Установка Podman](Инструкция%20по%20установке%20ПО/Установка%20Podman.md)
+
+[Установка интерфейсной части Podman](Инструкция%20по%20установке%20ПО/Установка%20интерфейсной%20части%20Podman.md)
+
+[Установка Podman на Linux](Инструкция%20по%20установке%20ПО/Установка%20Podman%20на%20Linux.md)
+
+
+[Варианты установки ПО](Инструкция%20по%20установке%20ПО/Варианты%20установки%20ПО.md)
+
+[Главная](_index.md)
