--- a/content/Инструкция по установке ПО/Инструкция по установке ПО.md
+++ b/content/Инструкция по установке ПО/Инструкция по установке ПО.md
@@ -43,3 +43,8 @@ tags:
 [Проверка версии OpenGL](Инструкция%20по%20установке%20ПО/Проверка%20версии%20OpenGL.md)
 
 [Функциональные характеристики](Инструкция%20по%20установке%20ПО/Функциональные%20характеристики.md)
+
+
+# Назад
+
+[Главная](_index.md)
