--- a/content/Пользовательский интерфейс/_Пользовательский интерфейс.md
+++ b/content/Пользовательский интерфейс/_Пользовательский интерфейс.md
@@ -13,7 +13,7 @@ tags:
 
 [Браузер проекта](Пользовательский%20интерфейс/Браузер%20проекта.md)
 
-![200](Пользовательский%20интерфейс/files/2023-08-15_20h03_35.png)
+![200](Пользовательский%20интерфейс/Пользовательский%20интерфейс_imgs/ProjectBrowser.png)
 
 [Окно свойств](Пользовательский%20интерфейс/Окно%20свойств.md)
 
@@ -23,8 +23,13 @@ tags:
 
 ## Графические окна
 
-[Работа с планшетом](Пользовательский%20интерфейс/Работа%20с%20планшетом.md)
+[Планшет](Пользовательский%20интерфейс/Планшет.md)
 
 [Кроссплот](Пользовательский%20интерфейс/Кроссплот.md)
 
 [Гистограмма](Пользовательский%20интерфейс/Гистограмма.md)
+
+
+## Назад:
+
+[_index](_index.md)
