--- a/content/Пользовательский интерфейс/Основное окно.md
+++ b/content/Пользовательский интерфейс/Основное окно.md
@@ -1,5 +1,6 @@
 
 Интерфейс продукта представляет из себя настраиваемое окно с пятью базовыми рабочими зонами:  
+
 * Центральная: отображение планшета, карт, кросс-плотов и прочих рабочих инструментов  
 * Правая: по умолчанию в этой части отображается браузер проекта  
 * Левая: окно отображения свойств объектов (Property Editor)  
@@ -34,9 +35,9 @@
 
 **Browser** – обновление содержимого браузера проекта, используется только после загрузки новых данных. В ближайшее время данная иконка будет убрана, а браузер проекта будет всегда обновляться автоматически.
 
-**Log** **View** – планшет, для отображения каротажных данных в одно и многоскважинном режимах.
+[Планшет](Пользовательский%20интерфейс/Планшет.md) – планшет, для отображения каротажных данных в одно и многоскважинном режимах.
 
-**Cross** **Plot** – инструмент отображения кросс-плотов. На данном этапе, этот инструмент обладает демонстрационным функционалом и отображает массив заранее определенных значений. В следующей версии продукта, кросс-плот будет подключен к базе данных продукта для его полноценного использования.
+[Кроссплот](Пользовательский%20интерфейс/Кроссплот.md) – инструмент отображения кросс-плотов. На данном этапе, этот инструмент обладает демонстрационным функционалом и отображает массив заранее определенных значений. В следующей версии продукта, кросс-плот будет подключен к базе данных продукта для его полноценного использования.
 
 Любую их четырех зон (кроме центральной) можно скрыть/показать полностью с помощью соответствующих иконок в верхней, правой части приложения:
 
