--- a/content/Пользовательский интерфейс/Кроссплот.md
+++ b/content/Пользовательский интерфейс/Кроссплот.md
@@ -1,6 +1,6 @@
 Для построения графиков доступен инструмент кросс-плот, который открывается нажатием соответствующей кнопки на панели:
 
-![](Пользовательский%20интерфейс/Crossplot_basics_imgs/CrossplotMainMenu.png)
+![](Пользовательский%20интерфейс/Кроссплот_imgs/CrossplotMainMenu.png)
 
 
 При первом открытии пользователь увидит следующее окно, в котором по умолчанию сразу заданы кривые для отображения: NPHI для оси Y, RHOB для оси X. Также обозначено, что эти кривые будут взяты из датасета с именем LQC. Все эти параметры можно поменять, если просто перенести другой датасет в советующее поле, либо другую кривую в поле с указанием кривой.
