--- a/content/Пользовательский интерфейс/_Пользовательский интерфейс.md
+++ b/content/Пользовательский интерфейс/_Пользовательский интерфейс.md
@@ -9,7 +9,7 @@ tags:
 
 [Основное окно](Пользовательский%20интерфейс/Основное%20окно.md)
 
-![200](Пользовательский%20интерфейс/Пользовательский%20интерфейс_imgs/MainWindow.png)
+![](Пользовательский%20интерфейс/Пользовательский%20интерфейс_imgs/MainWindow.png)
 
 [Браузер проекта](Пользовательский%20интерфейс/Браузер%20проекта.md)
 
