--- a/content/Интерпретация данных ГИС/Интерпретация данных ГИС.md
+++ b/content/Интерпретация данных ГИС/Интерпретация данных ГИС.md
@@ -8,7 +8,7 @@ tags:
 
 [Базовые понятия об автоматической обработке данных](Интерпретация%20данных%20ГИС/Базовые%20понятия%20об%20автоматической%20обработке%20данных.md)
 
-[_Интерпретация данных ГИС](Интерпретация%20данных%20ГИС/_Интерпретация%20данных%20ГИС.md)
+[Интерпретация данных ГИС](Интерпретация%20данных%20ГИС/Интерпретация%20данных%20ГИС.md)
 
 [Восстановление данных ГИС](Интерпретация%20данных%20ГИС/Восстановление%20данных%20ГИС.md)
 
