--- a/content/Пользовательский интерфейс/Основное окно.md
+++ b/content/Пользовательский интерфейс/Основное окно.md
@@ -66,4 +66,4 @@ tags:
 
 ## Назад:
 
-[Пользовательский интерфейс](Пользовательский%20интерфейс/_Пользовательский%20интерфейс.md)
+[Пользовательский интерфейс](Пользовательский%20интерфейс/Пользовательский%20интерфейс.md)
