Загрузка табличных данных

--- a/content/Обзор процесса работы/Загрузка каротажных данных.md
+++ b/content/Обзор процесса работы/Загрузка каротажных данных.md
@@ -1,4 +1,4 @@
-Для загрузки данных необходимо воспользоваться кнопкой **Import**:
+Для загрузки каротажных данных необходимо воспользоваться кнопкой **Import**:
 
 ![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image60.png)
 
@@ -10,7 +10,7 @@
 
 ![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image62.png)
 
-Как только все данные загружены и процесс автоматической обработки и интерпретации завершен, необходимо нажать кнопку обновления браузера проекта, чтобы увидеть все загруженные и рассчитанные кривые в браузере проекта (в ближайшей версии браузер будет обновляться автоматически по завершению загрузки данных и их обработки):
+Как только все данные загружены и процесс автоматической обработки и интерпретации завершен, необходимо нажать кнопку обновления браузера проекта, чтобы увидеть все загруженные и рассчитанные кривые в браузере проекта:
 
 ![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image63.png)
 
