--- a/content/Обзор процесса работы/Загрузка табличных данных.md
+++ b/content/Обзор процесса работы/Загрузка табличных данных.md
@@ -21,7 +21,7 @@ tags:
 
 В файлах табличного вида могут быть загружена почти любая информация, но чаще всего загружаются следующие данные:
 + данные геохронологии, [[стратиграфия]] и [[маркеры]]
-+ [[керновые данные]], включая интерваля отбора, описания и прочее
++ [Керн](Теория/Керн.md), включая интерваля отбора, описания и прочее
 + [[инклинометрия]]
 + [[заголовки скважин]]
 
