--- a/content/Пользовательский интерфейс/Основное окно.md
+++ b/content/Пользовательский интерфейс/Основное окно.md
@@ -1,10 +1,11 @@
 
 ---
-title: "Варианты установки ПО"
+title: "Основное окно"
 date: 2022-08-15T09:03:20-08:00
 tags:
 - Основное окно
 - Базовые инструменты
+- Интерфейс
 ---
 
 
