Пользовательский интерфейс обновление

--- a/content/Пользовательский интерфейс/Окно свойств.md
+++ b/content/Пользовательский интерфейс/Окно свойств.md
@@ -1,3 +1,12 @@
+---
+title: "Окно свойств"
+date: 2022-08-16
+tags:
+- Свойства
+- Основы
+---
+
+
 Для большего удобства работы пользователя, в продукте Гамма реализовано единое окно редактирования свойств любого объекта в приложении. Данное окно называется Property Editor.
 
 ![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image55.png)
@@ -9,3 +18,19 @@
 В следующих версиях, возможности данного окна будет существенно расширены, появятся интерактивные инструменты редактирования параметров:
 
 ![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image57.png)
+
+
+
+## Связанные страницы
+
+[Браузер проекта](Пользовательский%20интерфейс/Браузер%20проекта.md)
+
+[Журнал](Пользовательский%20интерфейс/Журнал.md)
+
+[Окно рабочего процесса](Пользовательский%20интерфейс/Окно%20рабочего%20процесса.md)
+
+[Основное окно](Пользовательский%20интерфейс/Основное%20окно.md)
+
+## Назад:
+
+[Пользовательский интерфейс](Пользовательский%20интерфейс/Пользовательский%20интерфейс.md)
