--- a/content/Пользовательский интерфейс/Пользовательский интерфейс.md
+++ b/content/Пользовательский интерфейс/Пользовательский интерфейс.md
@@ -3,6 +3,7 @@ title: "Пользовательский интерфейс"
 date: 2022-08-15T09:03:20-08:00
 tags:
 - Интерфейс
+- Основы
 ---
 
 ## Базовые окна интерфейса ПО
@@ -15,7 +16,7 @@ tags:
 
 [Окно рабочего процесса](Пользовательский%20интерфейс/Окно%20рабочего%20процесса.md)
 
-[Окно отображения информации](Пользовательский%20интерфейс/Окно%20отображения%20информации.md)
+[Журнал](Пользовательский%20интерфейс/Журнал.md)
 
 ## Графические окна
 
