--- a/content/Обзор процесса работы/Загрузка табличных данных.md
+++ b/content/Обзор процесса работы/Загрузка табличных данных.md
@@ -43,7 +43,7 @@ tags:
 
 ![[Обзор процесса работы/ЗагрузкаТабличныхДанных_imgs/2023-08-11_09h05_42.png]]
 
-После того как все настройки сделаны можно проверить корректность параметров нажав кнопку Preview. При этом, если обнаружаться ошибке либо в настройках, либо в самой таблице, они будут отображены в [Окне отображения информации](Пользовательский%20интерфейс/Окно%20отображения%20информации.md).
+После того как все настройки сделаны можно проверить корректность параметров нажав кнопку Preview. При этом, если обнаружаться ошибке либо в настройках, либо в самой таблице, они будут отображены в [Окне отображения информации](Пользовательский%20интерфейс/Журнал.md).
 
 Если ошибок не обнаружено, то для загрузки в БД Гаммы обозначенной информации, необходимо нажать **Apply**. После чего данные попадут в БД продукта:
 
