Изменения после ревью от Ивана

--- a/content/Пользовательский интерфейс/Гистограмма.md
+++ b/content/Пользовательский интерфейс/Гистограмма.md
@@ -8,7 +8,7 @@ tags:
 - Анализ
 ---
 
-Инструмент доступен в верхней части панели продукта
+Инструмент доступен в верхней части панели инструментов.
 
 ![](Пользовательский%20интерфейс/Гистограмма_imgs/HistogramOnRibbon.png)
 
@@ -30,12 +30,12 @@ tags:
 
 ![](Пользовательский%20интерфейс/Гистограмма_imgs/AddWellsToHistogram.png)
 
-> [!Note]- Пример
+> [!Info]- Пример
 > ![](Пользовательский%20интерфейс/Гистограмма_imgs/AddDataToHistogram.gif)
 
 
 Настроить масштаб отображения:
-+ изменить масштаб гистограмма (перенести ее визуально влево или вправо) можно при помощи удержания правой кнопки мыши
++ изменить масштаб гистограммы (перенести ее визуально влево или вправо) можно при помощи удержания правой кнопки мыши
 + Для увеличения или уменьшения масштаба достаточно покрутить колесо мыши с зажатой клавишей CTLR
 + Также можно задать точные параметры отображения вручную, если просто вбить новые значения по осям
 
@@ -62,21 +62,21 @@ tags:
 
 ![](Пользовательский%20интерфейс/Гистограмма_imgs/AdjustBinsCount.png)
 
-> [!Note]- Пример
+> [!Info]- Пример
 > ![](Пользовательский%20интерфейс/Гистограмма_imgs/AdjustBinsCount.gif)
 
 Второй ползунок позволяет динамически менять сглаженность непрерывной кривой при отображении:
 
 ![](Пользовательский%20интерфейс/Гистограмма_imgs/AdjustSmoothness.png)
 
-> [!Tips]- Пример
+> [!Info]- Пример
 > ![](Пользовательский%20интерфейс/Гистограмма_imgs/AdjustSmoothness.gif)
 
 При нажатии на кнопку Frequencies происходит изменение с отображения гистограммы в виде частот, на кумулятивный вариант отображения:
 
 ![](Пользовательский%20интерфейс/Гистограмма_imgs/Frequencies_Cumulat.png)
 
-> [!Note]- Пример
+> [!Info]- Пример
 > ![](Пользовательский%20интерфейс/Гистограмма_imgs/Frequencies_Cumulat.gif)
 
 
