--- a/content/Пользовательский интерфейс/Журнал.md
+++ b/content/Пользовательский интерфейс/Журнал.md
@@ -24,17 +24,20 @@ tags:
 
 Красные – критически важные сообщения. Такие сообщения крайне редкие и с ними необходимо ознакомиться в обязательном порядке.
 
+Кроме того, все записи сохраняются в LOG файлах в корневой папке интерфейса ПО.
 
-## Связанные страницы
+![](Пользовательский%20интерфейс/Журнал_imgs/log%20files%20in%20Explorer.png)
 
-[Браузер проекта](Пользовательский%20интерфейс/Браузер%20проекта.md)
+# Связанные страницы
 
-[Окно рабочего процесса](Пользовательский%20интерфейс/Окно%20рабочего%20процесса.md)
+[БраузерПроекта](Пользовательский%20интерфейс/БраузерПроекта.md)
+
+[ОкноРабочегоПроцесса](Пользовательский%20интерфейс/ОкноРабочегоПроцесса.md)
 
 [Окно свойств](Пользовательский%20интерфейс/Окно%20свойств.md)
 
-[Основное окно](Пользовательский%20интерфейс/Основное%20окно.md)
+[ОсновноеОкно](Пользовательский%20интерфейс/ОсновноеОкно.md)
 
-## Назад:
+## Назад
 
 [Пользовательский интерфейс](Пользовательский%20интерфейс/Пользовательский%20интерфейс.md)
