--- a/content/Пользовательский интерфейс/Кроссплот.md
+++ b/content/Пользовательский интерфейс/Кроссплот.md
@@ -16,9 +16,12 @@ tags:
 ![](Пользовательский%20интерфейс/Кроссплот_imgs/CrossplotMainMenu.png)
 
 
-При первом открытии пользователь увидит следующее окно, в котором по умолчанию сразу заданы кривые для отображения: NPHI для оси Y, RHOB для оси X. Также обозначено, что эти кривые будут взяты из датасета с именем LQC. Все эти параметры можно поменять, если просто перенести другой датасет в советующее поле, либо другую кривую в поле с указанием кривой.
+При первом открытии пользователь увидит следующее окно, в котором по умолчанию сразу заданы кривые для отображения. В примере ниже это NPHI для оси Y, RHOB для оси X. Также обозначено, что эти кривые будут взяты из датасета с именем LQC. Все эти параметры можно поменять, если просто перенести другой датасет в советующее поле, либо другую кривую в поле с именем кривой.
 
-![600](http://gamma-wellbore.com/wp-content/uploads/2023/02/image51.png)
+![](Пользовательский%20интерфейс/Кроссплот_imgs/Crossplot_startWindow.png)
+
+> [!Note]- Видео
+> ![](Пользовательский%20интерфейс/Кроссплот_imgs/CrossPlot_inputDataSelection.gif)
 
 Когда нужные кривые обозначены, достаточно перенести одну или несколько скважин в поле кросс-плота:
 
