--- a/content/Пользовательский интерфейс/Окно свойств.md
+++ b/content/Пользовательский интерфейс/Окно свойств.md
@@ -11,7 +11,7 @@ tags:
 
 ![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image55.png)
 
-При выборе разных объектов, в окне свойств будут отображаться свойства этого объекта. Так, например, если пользователь выбрал одно из рабочих процессов, то свойства, этого процесса можно будет изменить в окне свойств. Ниже представлен пример выбранного процесса построения объемной минералогической модели, где пользователь может изменить тип предполагаемого углеводорода и параметры в уравнении Арчи-Дахнова:
+При выборе разных объектов, в окне свойств будут отображаться свойства этого объекта. Так, например, если пользователь выбрал один из рабочих процессов, то свойства этого процесса можно будет изменить в окне свойств. Ниже представлен пример выбранного процесса построения объемной минералогической модели, где пользователь может изменить тип предполагаемого углеводорода и параметры в уравнении Арчи-Дахнова:
 
 ![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image56.png)
 
@@ -23,13 +23,13 @@ tags:
 
 ## Связанные страницы
 
-[Браузер проекта](Пользовательский%20интерфейс/Браузер%20проекта.md)
+[БраузерПроекта](Пользовательский%20интерфейс/БраузерПроекта.md)
 
 [Журнал](Пользовательский%20интерфейс/Журнал.md)
 
-[Окно рабочего процесса](Пользовательский%20интерфейс/Окно%20рабочего%20процесса.md)
+[ОкноРабочегоПроцесса](Пользовательский%20интерфейс/ОкноРабочегоПроцесса.md)
 
-[Основное окно](Пользовательский%20интерфейс/Основное%20окно.md)
+[ОсновноеОкно](Пользовательский%20интерфейс/ОсновноеОкно.md)
 
 ## Назад:
 
