--- a/content/Пользовательский интерфейс/ОсновноеОкно.md
+++ b/content/Пользовательский интерфейс/ОсновноеОкно.md
@@ -20,7 +20,7 @@ tags:
 
 ![](https://gamma-wellbore.com/wp-content/uploads/2023/02/image2-1024x618.png)
 
-Положения окон можно настраивать под текущее задачи пользователя. Например, можно расширить центральную рабочую область экрана и перенести окно рабочих процессов и журнал в правую часть основного окна:
+Положения окон можно настраивать под текущие задачи пользователя. Например, можно расширить центральную рабочую область экрана и перенести окно рабочих процессов и журнал в правую часть основного окна:
 
 ![](https://gamma-wellbore.com/wp-content/uploads/2023/02/image3-1024x619.png)
 
@@ -30,31 +30,30 @@ tags:
 
 В верхней части основного окна располагаются иконки для запуска базовых инструментов продукта:
 
-![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image5.png)
+![](Пользовательский%20интерфейс/ОсновноеОкно_imgs/TopPannel.png)
 
 Размер этих иконок можно увеличить или уменьшить, вплоть до минимального размера и без отображения подписей (когда они станут не нужны пользователю). Для этого достаточно потянуть за нижний край этого поля вверх или вниз:
 
-![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image6.png)
+![](Пользовательский%20интерфейс/ОсновноеОкно_imgs/TopPannelHeight.png)
 
-Минимальный размер иконок выглядит следующим образом и используется для увеличения эффективного рабочего пространства во время работы в приложении:
-
-![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image7.png)
-
-Данные иконки используются для следующих задач:
 
 **Import** – инструмент импорта данных в формате LAS
 
 **Browser** – обновление содержимого браузера проекта, используется только после загрузки новых данных. В ближайшее время данная иконка будет убрана, а браузер проекта будет всегда обновляться автоматически.
 
-[Планшет](Пользовательский%20интерфейс/Планшет.md) – планшет, для отображения каротажных данных в одно и многоскважинном режимах.
+[Планшет](Пользовательский%20интерфейс/Планшет.md) – планшет, для отображения каротажных данных в одно и многоскважинном режимах
 
-[Кроссплот](Пользовательский%20интерфейс/Кроссплот.md) – инструмент отображения кросс-плотов. На данном этапе, этот инструмент обладает демонстрационным функционалом и отображает массив заранее определенных значений. В следующей версии продукта, кросс-плот будет подключен к базе данных продукта для его полноценного использования.
+[Кроссплот](Пользовательский%20интерфейс/Кроссплот.md) – инструмент отображения кросс-плотов
+
+[Гистограмма](Пользовательский%20интерфейс/Гистограмма.md) - инструмент работы с гистограммами
+
+
 
 Любую их четырех зон (кроме центральной) можно скрыть/показать полностью с помощью соответствующих иконок в верхней, правой части приложения:
 
 ![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image8.png)
 
-Центральную часть приложения можно расширить на весь экран (полноэкранный режим), при помощи крайней правой иконки в том же ряду сверху:
+Центральную часть приложения можно расширить на весь экран (полноэкранный режим), при помощи крайней правой иконки:
 
 ![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image9.png)
 
