--- a/content/Пользовательский интерфейс/Планшет.md
+++ b/content/Пользовательский интерфейс/Планшет.md
@@ -18,7 +18,7 @@ tags:
 
 ## Базовые инструменты работы с планшетом
 
-Для открытия планшета достаточно воспользоваться соответствующей иконкой **Log** **View** на верхней панели продукта:
+Для открытия планшета достаточно воспользоваться соответствующей иконкой **LogView** в панели инструментов:
 
 ![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image28.png)
 
@@ -98,7 +98,7 @@ tags:
 
 При этом все эти данные должны иметь тип данных, включающий «* Volume Fraction» (объемная доля).
 
-Такие кривые можно отобразить в виде объемной модели. В соответствии с принятой продукте логикой упрощенной работы и минимального количество нажатий, для создания объемной модели не нужно создавать специальный кумулятивный трек, как это принято в других продуктах. Достаточно просто кинуть одну кривую с объемной долей компонента на трек и к ней закинуть другую кривую. В результате трек переключится в режим отображения объемной модели:
+Такие кривые можно отобразить в виде объемной модели. В соответствии с принятой в продукте логикой упрощенной работы и минимального количество нажатий, для создания объемной модели не нужно создавать специальный кумулятивный трек, как это принято в других продуктах. Достаточно просто кинуть одну кривую с объемной долей компонента на трек и к ней закинуть другую кривую. В результате трек переключится в режим отображения объемной модели:
 
 ![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image44.png)
 
