--- a/content/Пользовательский интерфейс/Пользовательский интерфейс.md
+++ b/content/Пользовательский интерфейс/Пользовательский интерфейс.md
@@ -8,13 +8,13 @@ tags:
 
 ## Базовые окна интерфейса ПО
 
-[Основное окно](Пользовательский%20интерфейс/Основное%20окно.md)
+[ОсновноеОкно](Пользовательский%20интерфейс/ОсновноеОкно.md)
 
-[Браузер проекта](Пользовательский%20интерфейс/Браузер%20проекта.md)
+[БраузерПроекта](Пользовательский%20интерфейс/БраузерПроекта.md)
 
 [Окно свойств](Пользовательский%20интерфейс/Окно%20свойств.md)
 
-[Окно рабочего процесса](Пользовательский%20интерфейс/Окно%20рабочего%20процесса.md)
+[ОкноРабочегоПроцесса](Пользовательский%20интерфейс/ОкноРабочегоПроцесса.md)
 
 [Журнал](Пользовательский%20интерфейс/Журнал.md)
 
