--- a/content/Обзор процесса работы/Обзор процесса работы в ПО.md
+++ b/content/Обзор процесса работы/Обзор процесса работы в ПО.md
@@ -10,11 +10,11 @@ tags:
 
 [Загрузка каротажных данных](Обзор%20процесса%20работы/Загрузка%20каротажных%20данных.md)
 
-[Загрузка керновых данных](Обзор%20процесса%20работы/Загрузка%20керновых%20данных.md)
+[Загрузка табличных данных](Обзор%20процесса%20работы/Загрузка%20табличных%20данных.md)
 
 [Загрузка данных стратиграфии](Обзор%20процесса%20работы/Загрузка%20данных%20стратиграфии.md)
 
 [Загрузка данных в определенную скважину](Обзор%20процесса%20работы/Загрузка%20данных%20в%20определенную%20скважину.md)
 
-## Назад:
+
 
