--- a/content/Теория/Керн.md
+++ b/content/Теория/Керн.md
@@ -5,18 +5,19 @@ date: 2022-08-15T09:03:20-08:00
 tags:
 - Керн
 - Теория
+- Основы
 ---
 
 Керн - проба вещества, представляющая собой цилиндрический столбик, отбираемый при бурении с целью дальнейшего изучения[1](https://ru.wikipedia.org/wiki/%D0%9A%D0%B5%D1%80%D0%BD_(%D0%BF%D1%80%D0%BE%D0%B1%D0%B0)#cite_note-1). Служит материалом для различных лабораторных анализов[2](https://ru.wikipedia.org/wiki/%D0%9A%D0%B5%D1%80%D0%BD_(%D0%BF%D1%80%D0%BE%D0%B1%D0%B0)#cite_note-2).
 
 
-## Рекомендации по загрузке данных
+## Рекомендации по загрузке керновых данных
 
-Традиционно загрузка керновых данных производится из табличных форматов. На данной стадии разработки инструмент загрузки поддерживает форматы XLS и XLSX. Рекомендуется использовать более новый формат XLSX при работе.
+Традиционно загрузка керновых данных производится из табличных форматов. Рекомендуется использовать XLS и XLSX форматы.
 
 ## Рекомендации к загружаемым данным керна
 
-Первые 3 колонки должны быть Well, Dataset, MD. Далее идут колонки с керновыми данными в поточечном виде, при этом количество колонок не ограничено. Каждая колонка должна иметь прописанную единицу измерения во второй строке. Пример для загрузки одной колонки с керновой пористостью (CPHI):
+Первые 3 колонки должны быть Well, Dataset, MD. Далее идут колонки с керновыми данными в поточечном виде, при этом количество колонок не ограничено. Каждая колонка может иметь прописанную единицу измерения во второй строке. Пример для загрузки одной колонки с керновой пористостью (CPHI):
 
 ![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image67.png)
 
@@ -24,7 +25,7 @@ tags:
 
 ![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image68.png)
 
-Названия керновых данных обычно начинаются с буквы С, т.е. Core). Некоторые основные общепринятые мнемоники приведены в таблице:
+Названия керновых данных обычно начинаются с латинской буквы С, т.е. Core). Некоторые основные общепринятые мнемоники приведены в таблице:
 
 ![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image69.png)
 
