--- a/content/Интерпретация данных ГИС/Базовые понятия об автоматической обработке данных.md
+++ b/content/Интерпретация данных ГИС/Базовые понятия об автоматической обработке данных.md
@@ -35,7 +35,7 @@ tags:
 
 ![](http://gamma-wellbore.com/wp-content/uploads/2023/02/image75.png)
 
-**Log** **Reconstruction** – прогнозирование всех кривых, которые могут быть использованы при интерпретации. Далее эта реконструированные кривые используются в интервалах отсутствия кривых или в интервалах плохого качества
+**Log** **Reconstruction** – прогнозирование всех кривых, которые могут быть использованы при интерпретации. Далее эти реконструированные кривые используются в интервалах отсутствия кривых или в интервалах плохого качества.
 
 **Lithology** **Prediction** – прогнозирование блоковых (флаговых) литологических кривых на основе как минимум одной такой кривой, предоставленной от пользователя и всех исходных поточечных кривых, которые имеют явную или не явную взаимосвязь с этой литологией. Чем больше кривых литологии, сделанных пользователем вручную, тем больше надежность автоматического прогноза. Каждый раз при добавлении новых, сделанных вручную результатов, программа дополнительно обучает модель. Выходная кривая имеет название LITHO_CB. Пример работы алгоритма:
 
